--- a/module_5_starter_code/Starter_Code/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/module_5_starter_code/Starter_Code/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "249"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "920           62.570880                 2  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "248"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "Text(0.5, 1.0, 'Total Mice')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -875,7 +875,7 @@
    ],
    "source": [
     "# Generate a bar plot showing the total number of timepoints for all mice tested for each drug regimen using Pandas.\n",
-    "mice_count = clean_df[\"Drug Regimen\"].value_counts()\n",
+    "mice_count = [clean_df\"Drug Regimen\"].value_counts()\n",
     "mice_count\n",
     "# Create a Pandas bar plot based off of the group series from before and label the title\n",
     "plot_pandas = mice_count.plot.bar(color='b')  \n",
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "Text(0, 0.5, 'Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "Text(0, 0.5, 'Averag Tumor Volume (mm3)')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
